--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "jquery": "^3.5.0",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
