--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@types/googlemaps": "^3.39.3",
     "angular-6-social-login": "^1.1.1",
     "jquery": "^3.5.0",
     "ngx-bootstrap": "^5.6.1",
