--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ckeditor/ckeditor5-build-classic": "^19.0.0",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@types/googlemaps": "^3.39.3",
     "angular-6-social-login": "^1.1.1",
