--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/imageupload.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -93,7 +95,9 @@
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/imageupload.js"
+            ]
           }
         },
         "lint": {
