--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@types/googlemaps": "^3.39.3",
     "angular-6-social-login": "^1.1.1",
+    "angular-cli-ghpages": "^0.6.2",
     "jquery": "^3.5.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-pagination": "^5.0.0",
